--- a/src/components/common/header/header.component.html
+++ b/src/components/common/header/header.component.html
@@ -6,13 +6,13 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item" routerLinkActive="['active']">
+        <a class="nav-link" routerLink="">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+      <li class="nav-item" routerLinkActive='active'>
+        <a class="nav-link" [routerLink]="['teams']">Teams</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" routerLinkActive="['active']">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
