adding teams page

--- a/src/components/teams/teams.component.html
+++ b/src/components/teams/teams.component.html
@@ -1,2 +1,8 @@
-<app-conference conferenceName="AFC West" [teams]=teams>
+<app-conference conferenceName="AFC West" [teams]=afcWest>
+</app-conference>
+<app-conference conferenceName="AFC West" [teams]=afcNorth>
+</app-conference>
+<app-conference conferenceName="AFC West" [teams]=afcSouth>
+</app-conference>
+<app-conference conferenceName="AFC West" [teams]=afcEast>
 </app-conference>
